Version 2.4.0b5

	Remove --with-indexdir option from configure.  This is obtained
	from amanda.conf at run time.  Also fix things so that it *is*
	obtained from amanda.conf in all cases.
	- scott

	This is no longer tested on configure.in, since it is
	expressly forbidden to include kernel headers under glibc,
	according to Matthias Urlichs <smurf@noris.de>.  However, Eric
	Doutreleau <ed@cti.ecp.fr> said he needed to include this
	header file in order to build amanda on
	sparc-unknown-linux-gnu.  -oliva

	It is now possible to specify a username to be used to backup
	up with samba.
	-Jean-Louis Martineau <martinea@iro.umontreal.ca>

	Make sure dumper replies with ABORT_FINISHED when a PORT-DUMP
	is aborted because of tape error.
	-Michael C. Povel <Michael.Povel@hub.de>

	Amcheck checks only for the needed features.
	-Jean-Louis Martineau <martinea@iro.umontreal.ca>

	Performance and memory-usage improvements to amrecover.
	-Jean-Louis Martineau <martinea@iro.umontreal.ca>

	Use extended regular expressions.
	-Noel Hunt <noel@jpmorgan.com>

	Fixed regular expressions for samba support.
	-Brian Fernald <fernald@nsi.edu>

	Fixed a few bugs that caused arithmetic exceptions in planner.
	-Bob Willcox <bob@luke.pmr.com>, Evan Champion
	<evanc@synapse.net>, scott and oliva

	amrecover should now be able to handle GNUtar restores.
	-Jean-Louis Martineau <martinea@iro.umontreal.ca>, plus
	incremental (-G) patch by Lars Fenneberg <lf@elemental.net>

	Ported to SINIX (Reliant Unix V5.43).
	-Michael Schmitz <mschmitz@iname.com>

	Configure now looks for large file support and will use it under
	Solaris 2.6 and above.
	-Blair Zajac <blair@gps.caltech.edu>

	Compatibility problems fixed for:
		SCO OpenServer 5.0.2: Paul Gampe <paulg@twics.com>

Version 2.4.0b4

	New changerfile and changerdev configuration keywords, that
	allow changer scripts to be configured in the main amanda
	configuration file.  Each changer script has been adapted, so