@@ -19,7 +19,6 @@
 #undef libexecdir
 #undef mandir
 #undef CONFIG_DIR
-#undef DB_DIR
 #undef DEBUG_DIR
 #undef LOG_DIR
 
