@@ -115,25 +115,9 @@ AC_ARG_WITH(indexdir,
     ],)
 
 AC_ARG_WITH(dbdir,
-    [  --with-dbdir=DIR       curinfo database in DIR [localstatedir/amanda]],
-    [
-	case "$withval" in
-	"" | y | ye | yes | n | no)
-	    AC_MSG_ERROR([*** You must supply an argument to the --with-dbdir option.])
-	  ;;
-	*) DB_DIR="$withval"
-	  ;;
-	esac
-    ],
-    : ${DB_DIR=$localstatedir/amanda}
-)
-DB_DIR=`(
-    test "x$prefix" = xNONE && prefix=$ac_default_prefix
-    test "x$exec_prefix" = xNONE && exec_prefix=${prefix}
-    eval echo "$DB_DIR"
-)`
-AC_DEFINE_UNQUOTED(DB_DIR,"$DB_DIR")
-AC_SUBST(DB_DIR)
+    [  --with-dbdir           deprecated, use infofile in amanda.conf],
+    [   AC_MSG_ERROR([*** --with-dbdir is deprecated, use infofile in amanda.conf instead.])
+    ],)
 
 AC_ARG_WITH(logdir,
     [  --with-logdir=DIR      log files go in DIR [localstatedir/amanda]],
