@@ -201,20 +201,12 @@ The configuration files would be stored under @CONFIG_DIR@/normal/ and
 @CONFIG_DIR@/archive/, respectively.
 .LP
 All log and database files generated by Amanda go in corresponding
-directories under
-'if '@LOG_DIR@'@DB_DIR@' \{\
-@LOG_DIR@.
-\}
-'el \{\
-@LOG_DIR@ (log files) and @DB_DIR@ (database files).
-\}
+directories somewhere.
+An example location is under
+@LOG_DIR@ (log files) and /usr/adm/amanda (database files).
 In our example, the files would go in
-'if '@LOG_DIR@'@DB_DIR@' \{\
-@LOG_DIR@/normal and @LOG_DIR@/archive.
-'el \{\
-@LOG_DIR@/normal and @LOG_DIR@/archive
-(@DB_DIR@/normal and @DB_DIR@/archive).
-\}
+@LOG_DIR@/normal, @LOG_DIR@/archive,
+/usr/adm/amanda/normal and /usr/adm/amanda/archive.
 .SH CONFIG FILE PARAMETERS
 .de BS
 \fB\\$1\fP\ \fI"\\$2"\fP
@@ -474,7 +466,7 @@ file.
 .TP
 .BS infofile string
 Default:
-.IR @DB_DIR@/curinfo .
+.IR /usr/adm/amanda/curinfo .
 The file or directory name for the historical information database.
 .TP
 .BS logfile string
@@ -486,7 +478,7 @@ log file.
 .TP
 .BS indexdir string
 Default
-.IR @DB_DIR@/index .
+.IR /usr/adm/amanda/index .
 The directory where index files are stored.
 Index files are
 only generated for filesystems whose
